fix style on dark mode

--- a/app/app.css
+++ b/app/app.css
@@ -7,9 +7,10 @@
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+  /* @apply bg-white dark:bg-gray-950; */
+  /* @apply text-gray-900 dark:text-gray-100; */
 
-  /* @media (prefers-color-scheme: dark) {
+  @media (prefers-color-scheme: dark) {
     color-scheme: dark;
-  } */
+  }
 }
